--- a/Changes
+++ b/Changes
@@ -7,6 +7,12 @@ Sniffer::HTTP
     - implement multiple outstanding requests/responses for one connection
     - find out why it doesn't listen on just port 80
 
+v0.21 (20110327):
+      - Fix loop behaviour in Sniffer::HTTP::flush_window to process more
+        than one packet
+      . Add synopsis to dump-raw.pl
+      . Fix tests, again
+
 v0.20 (20110322):
       - POD fixes
       - Reduced default value for snaplen libpcap parameter
