--- a/Changes
+++ b/Changes
@@ -101,7 +101,7 @@ v0.08 (20051104):
         handled gracefully
       - Make request absolute from Host: header
       - Reading from libpcap capture files works, even with filters
-      - Add (example of) reading from an ethereal capture (see t/03*)
+      - Add (example of) reading from an ethereal or Wireshark capture (see t/03*)
       - Fixed partially borked handling of Transfer-Encoding: chunked
       - Find and remember port number from TCP packets
           and put it in the request (faked via Host: header)
