--- a/Changes
+++ b/Changes
@@ -7,6 +7,11 @@ Sniffer::HTTP
     - implement multiple outstanding requests/responses for one connection
     - find out why it doesn't listen on just port 80
 
+0.25 2021-12-10:
+      - Fix test failure on newer HTTP::Message. We now require
+        HTTP::Message 6.14. This addresses RT #124234, reported by Slaven Rezic
+      - TODO interface tests when not running as root
+
 0.24 2016-11-09:
       - Fix RT 107349, reported by Slaven Rezic
       - Still not moved to Net::Inspect
